terraform/networking/vpc.tf
// --- VPC ---
resource "aws_vpc" "my_vpc" {
  cidr_block = var.vpc_cidr
  tags = {
    Name = "My VPC"
  }
}
